[gd_scene load_steps=3 format=3 uid="uid://d1h0jni1rppt8"]

[ext_resource type="Theme" uid="uid://cqrmidw50t0d0" path="res://ui_scenes/ui_theme.tres" id="1_bvprc"]
[ext_resource type="Script" path="res://ui_scenes/menu_options.gd" id="2_gatwh"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bvprc")
script = ExtResource("2_gatwh")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_right = 640.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Music"

[node name="Music" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "SFX Volume"
value = 100.0

[node name="Value" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "100%"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SFX"

[node name="SFX" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
tooltip_text = "SFX Volume"
value = 100.0

[node name="Value" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100%"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer2/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
